# testapp

./: default.nix
.obelisk/impl/: github.json
.obelisk/impl/.attr-cache/: command.out
backend/: backend.cabal  runtestenv.sh
backend/src/: Backend.hs
common/: common.cabal
common/src/Common/: Api.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
static/: extra.css  styling.css
