name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , semantic-reflex
               , reflex-dom-nested-routing
               , servant-reflex
               , lens
               , servant
               , containers
               , mtl
               , data-default
               , jsaddle-dom
               , jsaddle
               , reflex
               , reflex-dom-contrib
               , algebraic-graphs
               , currencies
               , transformers
               , bytestring
               , email-validate
               
               
               

               
  exposed-modules:
    Frontend
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , frontend
               , semantic-reflex
               , reflex-dom-nested-routing
               , servant-reflex
               , lens
               , servant
               , containers
               , mtl
               , data-default
               , jsaddle-dom
               , jsaddle
               , reflex
               , reflex-dom-contrib
               , algebraic-graphs
               , currencies
               , transformers
               , bytestring
               , email-validate
               
               
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
